# ros2_latency_evaluation

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt
src/ping_pong/: CMakeLists.txt  package.xml
src/ping_pong/src/: end_node.cpp  start_node.cpp
src/ping_pong_interfaces/: CMakeLists.txt  package.xml
src/ping_pong_interfaces/msg/: MetaInfo.msg  PerformanceHeader.msg  PingPong.msg  Stamped100b.msg  Stamped100kb.msg  Stamped10kb.msg  Stamped128b.msg  Stamped1kb.msg  Stamped500kb.msg
src/separate_processes/: CMakeLists.txt  package.xml
src/separate_processes/include/ping_pong/: utils.hpp
src/separate_processes/include/separate_processes/: eval_args.hpp  node_definitions.hpp  utils.hpp
src/separate_processes/launch/: chain.launch.py  launch_separate_nodes.xml
src/separate_processes/scripts/: analyze_package_drops.py  calc_e2e_lat.py  calculate_rel_deviation_qos.py  collect_lat_csv.py  create_csvs_for_paper.sh  run_all_benchmarks.sh  utils.py
src/separate_processes/src/: all_nodes_same_context.cpp  all_nodes_separate_context.cpp  any_node.cpp  end_node.cpp  intermediate_node.cpp  start_node.cpp
src/separate_processes/tests/: test_latency_e2e_calc.py
